[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["stake"] }
solana-program = "=1.18.17"

spl-stake-pool = { version = "1.0.0", features = ["no-entrypoint"] }
anchor-gen = "0.3.1"
spl-token = "=4.0.1"
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.3.3"
spl-transfer-hook-interface = "0.6.3"
pyth-sdk-solana = "0.10.1"
strum = { version = "0.26", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }

drift = { path = "./deps/drift" }
marinade = { package = "marinade-finance", git = "https://github.com/marinade-finance/liquid-staking-program", branch = "anchor-0.29", features = [
    "cpi",
] }
