[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
opt-level = 3
lto = "fat"
strip = "symbols"
debug = false
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "interface-instructions"] }
anchor-spl = { version = "0.30.1", features = ["stake"] }
solana-program = "=1.18.23"

spl-transfer-hook-interface = "0.6.5"
spl-tlv-account-resolution = "0.6.5"

spl-stake-pool = { version = "1.0.0", features = ["no-entrypoint"] }
anchor-gen = "0.3.1"
pyth-sdk-solana = "0.10.1"
strum = { version = "0.26", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }

drift = { path = "./deps/drift" }
marinade = { package = "marinade-finance", git = "https://github.com/glamsystems/liquid-staking-program", branch = "anchor-0.30.1", features = [
    "cpi",
] }
