[workspace]
members = ["libs/*", "programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
opt-level = 3
lto = "fat"
strip = "symbols"
debug = false
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = [
    "init-if-needed",
    "interface-instructions",
] }
anchor-spl = { version = "0.30.1", features = ["stake"] }
solana-program = "=1.18.23"
solana-security-txt = "1.1.1"

spl-transfer-hook-interface = "0.6.5"
spl-tlv-account-resolution = "0.6.5"

spl-stake-pool = { version = "1.0.0", features = ["no-entrypoint"] }
anchor-gen = "0.3.1"
pyth-solana-receiver-sdk = "0.3.1"

strum = { version = "0.26", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }

drift = { path = "./deps/drift" }
jupiter_gov = { path = "./deps/jupiter_gov" }
jupiter_vote = { path = "./deps/jupiter_vote" }
marinade = { package = "marinade-finance", git = "https://github.com/glamsystems/liquid-staking-program", branch = "anchor-0.30.1", features = [
    "cpi",
] }
kamino_lending = { path = "./deps/kamino_lending" }

glam_macros = { path = "./libs/macros" }
