[package]
name = "policy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "policy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
