[package]
name = "glam"
version = "0.2.3"
description = "Glam Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "glam"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }

spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-stake-pool = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
pyth-sdk-solana = { workspace = true }
strum = { workspace = true }
phf = { workspace = true }

drift = { workspace = true }
marinade = { workspace = true }
