[package]
name = "glam"
version = "0.3.11"
description = "Glam Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "glam"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
mainnet = []
idl-build = ["mainnet", "anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }

spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-stake-pool = { workspace = true }

pyth-solana-receiver-sdk = { workspace = true }
strum = { workspace = true }
phf = { workspace = true }

jup_locked_voter = { workspace = true }
jup_governance = { workspace = true }
drift = { workspace = true }
marinade = { workspace = true }
glam_macros = { workspace = true }
